<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="favorites">Favorites</string>
    <string name="name">Name</string>
    <string name="genres_label">Genres</string>
    <string name="genres">Genre 1, Genre 2, Genre 3, …</string>
    <string name="year">Year</string>
    <string name="language">Language</string>
    <string name="lorem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora nobis reprehenderit, voluptate sint sit itaque repudiandae eligendi debitis beatae, laudantium eaque numquam officia. Laborum earum nisi quae nihil odio minima?Laudantium eveniet ipsum provident veniam labore, rerum tempora dolorum, vero hic mollitia necessitatibus nesciunt nam esse perspiciatis facere iste debitis suscipit? Assumenda vero asperiores officia a nostrum deleniti ipsum laborum.</string>
    <string name="change_language_settings">Language</string>
    <string name="request_items_failed">Unable to request items</string>
    <string name="request_genres_failed">Unable to request genres</string>
    <string name="added_to_favorites">Added to favorites</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="empty_favorites">There are no favorites %s in database</string>
    <string name="change_reminder_settings">Reminder</string>
    <string name="settings">Settings</string>
    <string name="home" translatable="false">Home</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="request_failed">Request failed :(</string>
    <string name="no_items_match">No items match your search</string>
    <string name="widget_empty_favorites">There are no favorites in database</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="daily_reminder_description">It will remind you to back to Movie Catalogue every 7 AM</string>
    <string name="release_today_reminder">Release Today Reminder</string>
    <string name="release_today_reminder_description">It will remind you what movies are release today every 8 AM</string>
    <string name="daily_notif_message">Movie Catalogue is missing you!</string>
    <string name="has_been_release">%s has been release today!</string>
    <string name="alarm_turned_on">%s turned on</string>
    <string name="alarm_turned_off">%s turned off</string>
</resources>
