<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ItemDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_cover_detail"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:alpha="0.5"
            android:background="#000000"
            app:layout_constraintEnd_toEndOf="@id/img_cover_detail"
            app:layout_constraintStart_toStartOf="@id/img_cover_detail"
            app:layout_constraintTop_toTopOf="@id/img_cover_detail"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/img_photo_detail"
            android:layout_width="180dp"
            android:layout_height="250dp"
            android:layout_marginTop="180dp"
            android:scaleType="fitXY"
            android:transitionName="posterTransition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.129"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="ContentDescription"/>

        <ToggleButton
            android:id="@+id/fav_button"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:textOff=""
            android:textOn=""
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.982"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="26dp"
            android:text="@string/name"
            android:textSize="25sp"
            android:textStyle="bold"
            android:transitionName="nameTransition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/img_photo_detail"
            app:layout_constraintTop_toBottomOf="@+id/img_photo_detail" />

        <TextView
            android:id="@+id/genre_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/genres_label"
            app:layout_constraintStart_toStartOf="@+id/tv_name_detail"
            app:layout_constraintTop_toBottomOf="@+id/rb_star" />

        <RatingBar
            android:id="@+id/rb_star"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:theme="@style/GoldenRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:isIndicator="true"
            android:transitionName="ratingBarTransition"
            app:layout_constraintStart_toStartOf="@+id/tv_name_detail"
            app:layout_constraintTop_toBottomOf="@+id/tv_name_detail" />

        <TextView
            android:id="@+id/tv_genres_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="26dp"
            android:text="@string/genres"
            app:layout_constraintBottom_toBottomOf="@+id/genre_label"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/genre_label"
            app:layout_constraintTop_toTopOf="@+id/genre_label"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/year_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/year"
            app:layout_constraintStart_toStartOf="@+id/genre_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_genres_detail" />

        <TextView
            android:id="@+id/tv_year_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year"
            app:layout_constraintBottom_toBottomOf="@+id/year_label"
            app:layout_constraintStart_toStartOf="@+id/tv_genres_detail"
            app:layout_constraintTop_toTopOf="@+id/year_label" />

        <TextView
            android:id="@+id/lang_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/language"
            app:layout_constraintStart_toStartOf="@+id/year_label"
            app:layout_constraintTop_toBottomOf="@+id/tv_year_detail" />

        <TextView
            android:id="@+id/tv_lang_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/language"
            app:layout_constraintBottom_toBottomOf="@+id/lang_label"
            app:layout_constraintStart_toStartOf="@+id/tv_year_detail"
            app:layout_constraintTop_toTopOf="@+id/lang_label" />

        <TextView
            android:id="@+id/tv_description_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="26dp"
            android:text="@string/lorem"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/lang_label"
            app:layout_constraintTop_toBottomOf="@+id/lang_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>